--- a/metricas/templates/metricas/login.html
+++ b/metricas/templates/metricas/login.html
@@ -24,7 +24,7 @@
     }
 
     .login-header {
-        background-color: #37B4A4;
+        background-color: #33ac9b;
         color: white;
         padding: 2rem 1.5rem;
         text-align: left;
