--- a/metricas/templates/metricas/index.html
+++ b/metricas/templates/metricas/index.html
@@ -73,9 +73,8 @@
         
         .loading-overlay {
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             background-color: rgba(255, 255, 255, 0.9);
@@ -84,7 +83,6 @@
             justify-content: center;
             align-items: center;
             backdrop-filter: blur(5px);
-            display: none;
         }
 
         .loading-box {
